crates/toml/tests/snapshots/invalid/table/redefine-01.stderr
TOML parse error at line 5, column 2
  |
5 | [a.b]
  |  ^^^
duplicate key
